<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_articles"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/title_articles"/>

    <item
            android:id="@+id/navigation_practices"
            android:icon="@drawable/ic_pool_black_24dp"
            android:title="@string/title_practices"/>

    <item
            android:id="@+id/navigation_meditations"
            android:icon="@drawable/ic_library_music_black_24dp"
            android:title="@string/title_meditations"/>

</menu>
